[package]
name = "typing"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/phodal/typing"
documentation = "https://github.com/phodal/typing"
homepage = "https://github.com/phodal/typing"
description = """
typing is a type write tools.
"""
categories = ["text-processing"]
exclude = [
    "_fixtures",
    "docs",
    ".github",
    ".travis.yml",
]
build="build.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.40"

dirs = "2.0.2"
log = "0.4.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2.62"

[build-dependencies]
cmake = "0.1.31"

