[package]
name = "poc"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[target.'cfg(unix)'.dependencies]
libc = "0.2.62"

[build-dependencies]
cmake = "0.1.31"
